--- a/estilo/style.css
+++ b/estilo/style.css
@@ -19,13 +19,19 @@
 html, body{
     width: 100vw;
     height: 100vh;
-    position: relative;
     background-color: var(--cor03);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /*MAIN*/
 main{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+/*SECTION*/
+section#login{
     position: absolute;
     left: 50%;
     top: 50%;
@@ -35,24 +41,20 @@ main{
     height: 530px;
     border-radius: 20px;
     background-color: white;  
-    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.35); 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4); 
+    overflow: hidden;  
 }
-main > img{
-    width: 250px;
-    height: 190px;
-    border-radius: 20px 20px 0px 0px;
+section#login > div#imagem{
+    background: var(--cor02) url(../imagens/mar.jpg) no-repeat center bottom;
+    background-size: cover;
+    height: 200px;
 }
-
-/*SECTION*/
-section{
-    padding: 10px;
-}
-section > h1{
+section#login > div#formulario > h1{
     padding: 10px;
     text-align: center;
     font-size: 1.4em;
 }
-section > p{
+section#login > div#formulario > p{
     font-size: 0.75em;
 }
 
