--- a/estilo/medias-queries.css
+++ b/estilo/medias-queries.css
@@ -1,8 +1,46 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) and (max-width: 992px){
     body, html{
     background-image: linear-gradient(180deg, var(--cor01), var(--cor02), var(--cor03), var(--cor04));
     }
+
+    section#login{
+        width: 80vw;
+    }
+    
+    section#login > div#imagem{
+        float: left;        /*Posiciona a imagem na esquerda da caixa [main]*/
+        width: 30%;
+        height: 100%;
+    }
+
+    section#login > div#formulario{
+        float: right;       /*Posiciona a imagem na direita da caixa [main]*/
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 992px){
+    body, html{
+        background-image: linear-gradient(180deg, var(--cor01), var(--cor02), var(--cor03), var(--cor04));
+        }
+    
+    section#login{
+        width: 80vw;
+    }
+
+    section#login > div#imagem{
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+
+    section#login > div#formulario{
+        float: right;
+        width: 50%;
+    }
+
+    
     
 }
