--- a/estilo/style.css
+++ b/estilo/style.css
@@ -12,15 +12,16 @@
 
 /*GERAIS*/
 *{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
     padding: 0px; 
+    box-sizing: border-box;
 }
 
 html, body{
     width: 100vw;
     height: 100vh;
     background-color: var(--cor03);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /*MAIN*/
@@ -36,18 +37,29 @@ section#login{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;  
 
+    background-color: white; 
     width: 250px;
     height: 530px;
     border-radius: 20px;
-    background-color: white;  
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4); 
-    overflow: hidden;  
+
+    transition: width .4s, height .4s;
+    transition-timing-function: ease;       /*Suaviza a transição*/
+   
+    
 }
 section#login > div#imagem{
+    display: block;
     background: var(--cor02) url(../imagens/mar.jpg) no-repeat center bottom;
     background-size: cover;
     height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
 }
 section#login > div#formulario > h1{
     padding: 10px;
