--- a/estilo/medias-queries.css
+++ b/estilo/medias-queries.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+
+/*TABLET*/
 @media screen and (min-width: 768px) and (max-width: 992px){
     body, html{
     background-image: linear-gradient(180deg, var(--cor01), var(--cor02), var(--cor03), var(--cor04));
@@ -7,6 +9,7 @@
 
     section#login{
         width: 80vw;
+        height: 275px;
     }
     
     section#login > div#imagem{
@@ -21,26 +24,37 @@
     }
 }
 
+/*TELAS GRANDES*/
 @media screen and (min-width: 992px){
     body, html{
-        background-image: linear-gradient(180deg, var(--cor01), var(--cor02), var(--cor03), var(--cor04));
+        background-image: linear-gradient(180deg, var(--cor02), var(--cor03), var(--cor04));
         }
     
     section#login{
-        width: 80vw;
+        width: 800px;
+        height: 400px;
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
+    section#login > div#formulario > p{
+        margin: 20px;
+    }
+
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
     }
 
-    
-    
+    section#login > div#formulario > h1{
+        font-size: 2em;
+    }
+
+    section#login > div#formulario > p{
+        font-size: 1.4em;
+    }   
 }
