--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,7 +4,7 @@
 
 /*CORES*/
 :root{
-    --cor01:#5b828a;
+    --cor01:#a2d6df;
     --cor02:#497173;
     --cor03:#1a3536;
     --cor04:#121713;
@@ -36,19 +36,17 @@ section#login{
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;  
 
     background-color: white; 
-    width: 250px;
-    height: 530px;
+    width: 280px;
+    height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4); 
 
-    transition: width .4s, height .4s;
-    transition-timing-function: ease;       /*Suaviza a transição*/
-   
-    
+    transform: translate(-50%, -50%);
+    transition: width .7s, height .7s;
+    transition-timing-function: ease;       /*Suaviza a transição*/  
 }
 section#login > div#imagem{
     display: block;
@@ -62,12 +60,12 @@ section#login > div#formulario{
     padding: 10px;
 }
 section#login > div#formulario > h1{
-    padding: 10px;
     text-align: center;
-    font-size: 1.4em;
+    font-size: 1.5em;
 }
 section#login > div#formulario > p{
-    font-size: 0.75em;
+    margin: 10px 0px;
+    font-size: 0.9em;
 }
 
 /*FORM*/
@@ -75,58 +73,84 @@ form{
     text-align: center;
 }
 
-form p{
-    width: 225px;
-    padding: 3px;
-    border-radius: 10px;
+form > div.campo{
+    width: 100%;
+    height: 35px;
     margin: 5px 0px;
+    border: 2px solid var(--cor02);
+    border-radius: 8px;
     background-color: var(--cor02);
 }
 
 form i{
     vertical-align: middle;
-    margin: 5px;
+    color: var(--cor04);
 }
 
-form input{
-    height: 30px;
+div.campo i{
+    font-size: 2em;   
+}
+
+div.campo > input{
+    width: calc(100% - 40px);
+    height: 100%;
     border: none;
     border-radius: 5px;
-    font-size: 0.9em;
-    padding-left: 5px;
+    padding-left: 6px;
+    background-color: var(--cor01);
+    
 }
 
-form input#ienviar{
-    width: 230px;
+::placeholder{
+    font-family: monospace;
+    font-style: italic;
+    color: var(--cor03);
+}
+
+div.campo > input:focus-within{         /*IMPORTANTE*/
+    background-color: white;
+}
+
+form > input[type=submit]{  /*IMPORTANTE*/ 
+    display: block;
+    width: 100%;        /*100% em relação ao container*/
     height: 35px;
-    padding: 3px;
     background-color: var(--cor02);
     border: none;
+    border-radius: 5px;
     color: white;
     font-size: 1.1em;
+    cursor: pointer;
 }
 
-form input#ienviar:hover{
+form > input[type=submit]:hover{
     background-color: var(--cor03);
 }
 
-form a{
-    text-decoration: none;
-    color: #121713;
-}
-
-form p#link{
-    width: 230px;
-    background-color: white;
+form > a.botao{
+    display: block;
+    width: 100%;
+    height: 35px;
+    margin-top: 5px;
+    border-radius: 5px;
     border: 2px solid var(--cor02);
-    box-sizing: border-box;
+    padding-top: 4px;
+    background-color: white;
+    color: #121713;
+    text-decoration: none;
 }
 
-form p#link:hover{
+form a.botao:hover{
+    border-color: var(--cor01);
     background-color: var(--cor01);
 }
 
+form a.botao:hover i{
+    color: white;
+}
 
+
+/*Sempre colocar os transforms e transitions por último*/
 
 
 
